# Grafos

./: .gitignore  CMakeLists.txt  README.md
examples/: README.md
examples/0000_Hello/: Main  README.md  main.cpp  main.out
examples/0010_PointerAndReference/001_DynamicPointer/: Makefile  README.md  main.cpp
examples/0010_PointerAndReference/010_Reference/: Main  README.md  main.cpp
examples/0010_PointerAndReference/011_Reference/: README.md  main.cpp
examples/0010_PointerAndReference/015_StructReference/: main.cpp
examples/0020_VectorAndList/000_VectorWithReserve/: README.md  example.out  main.cpp
examples/0020_VectorAndList/005_Vector/: Main  main.cpp  main.out
examples/0020_VectorAndList/010_List/: example.out  main.cpp
examples/0020_VectorAndList/020_ForeachMacro/: example.out  main.cpp
examples/0030_Stack/: README.md  example.in  example.out  main.cpp
examples/0040_Queue/: README.md  example.out  main.cpp
examples/0040_Queue/Instable/: Makefile  README.md  example.in  example.out  main.cpp
examples/0040_Queue/Stable/: main.cpp
examples/0060_Graphs/Basic/: reading_graph.cpp
examples/0060_Graphs/DinamicAllocation/: Makefile
examples/Basic/: example.in  reading_graph.cpp
examples/DinamicAllocation/: reading_graph.cpp
lib/: CMakeLists.txt  list.c  list.h
test/: .gitignore  CMakeLists.txt
test/list/: CMakeLists.txt  general.c  insertion.c  list_test.h  remove.c  test.c
uva/BFS/ANodeTooFar_UVA336/: Makefile  README.md  entrada.in  resposta.out  uva336.c  uva336.cpp  uva336.py
uva/BFS/DungeonMaster_UVA532/: Makefile  clean_main.cpp  example.out  main.cpp
uva/BFS/KnightMoves_UVA439/: Makefile  uva439.c  uva439.cpp
uva/DFS/EvaluateTheExpression/: Makefile  clean_main.cpp  example.in  example.out  main.cpp  out
uva/DFS/EvaluateTheExpression_UVA11724/: README  example.in  example.out  main.cpp
uva/DFS/OrderingTasks_UVA10305/: Makefile  entrada2.in  main.cpp
uva/DFS/PickupSticks_UVA11686/: example.in  example.out  main.cpp
uva/DFS/RareOrder_UVA200/: Makefile  main.cpp
uva/MST/Airports_UVA11733/: Airports  Makefile  entrada.in  main.cpp  resposta.an
uva/MST/Prim_UVA10807/: Makefile  Prim  entrada.in  main.cpp  resposta.an  tags
